projects/206-Kubernetes-Microservice-Phonebook/Solution_files/k8s/resultserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resultserver-svc
  labels:
    app: resultserver-svc
spec:
  selector:
    app: resultserver-deploy
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30002
  type: NodePort
