projects/206-Kubernetes-Microservice-Phonebook/Solution_files/k8s/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
  labels:
    app: webserver-svc
spec:
  selector:
    app: webserver-deploy
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
  type: NodePort
